--- a/config.toml
+++ b/config.toml
@@ -27,23 +27,24 @@ theme = "hugo-assembly"
 # Services section
 [params.services]
   enable = true
-  title = "Services to the Community"
-  subtitle = "Divide and Conquer - Greed is Good - Fear works - Stoke the Hate"
+  title = "Community Service"
+  subtitle = "Division, Greed, Fear, Hate "
 
   [[params.services.item]]
     weight = "A"
-    description = "We support the Supreme Court decision Citizens United vs FEC and want to expand the rights of corporations to be heard in government, on the air waves.  Messages of dispair, fear, hate are the messages we use to confuse issues and to motivate the elderly with mixed messages of safety and freedom."
-    button_item_info = "Aristocracy"
+    description = "We support the Supreme Court decision Citizens United vs FEC and want to expand the right of anonymous corporate speech.  Messages of despair, fear, hate are messages that work well to attract the ignoratant the elderly and the racist voters using messages of exclusion, safety and freedom. <p>                                                                                                </p>"
+    button_item_info = "AnonymousSpeech"
 
   [[params.services.item]]
     weight = "B"
-    description = "Primarily, our stategy is to promote ignorance, hate, dispair in the Democratic system.  Our Think Tanks have strategized and learned the best way to achieve a aristacracy is to dis-enfranchize the votor de-fund the government regulations "
-    button_item_info = "Voter Suppression"
+    description = "Primarily, our strategy is to promote ignorance, hate and despair in the Democratic system.  Our Think Tanks have strategized and learned the best way to achieve an aristocracy is to dis-enfranchise the voter and de-fund the government. Voters, no age limit just income of $50k+ and you earn the right to vote.  Billionaires need freedom from regulation to fund other voters if necessary. "
+    button_item_info = "EarnedVote"
 
   [[params.services.item]]
     weight = "C"
-    description = "Education is for the Privileged and is wasted on the common man.  The primary goal is access to opportunity.  By dividing the community into segments we feel it will be easier to deprive the populous of education.  Education promotes contempt and a aristocracy can not thrive in a contemptious populous."
-    button_item_info = "Close Public Schools"
+    description = "Education is a Privilege we cant afford. Education is wasted on the poor.  The primary realization is education is opportunity. The goal is to deprive the populous of education to help suppress opportunity and ensure a healthy aristocracy.  Education promotes contempt and an aristocracy cannot thrive with a contemptuous populous."
+    button_item_info = "Education A Privilege"
+
 
 # Welcome section
 [params.welcome]
